--- a/src/Lab.ConfigurationEnv/appsettings.json
+++ b/src/Lab.ConfigurationEnv/appsettings.json
@@ -2,15 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Program": "Debug",
+      "Lab": "Debug"
     }
   },
   "AllowedHosts": "*",
   "Microservice":{
-    "MyPort":6553576,
+    "MyPort":655,
     "Infrastructure":{
       "Database":{
-        "ConnectionStrings":""
+        "ConnectionStrings":"hardcode.connectionstring"
       },
       "Caching":{
         "Redis":{
